--- a/src/static/css/iniciar_sesion.css
+++ b/src/static/css/iniciar_sesion.css
@@ -113,6 +113,7 @@
             display: flex;
             flex-direction: column;
             gap: 15px;
+            color: rgb(168, 3, 3);
         }
 
         .forgot-password, .create-account {
