--- a/src/templates/admin_inicio.html
+++ b/src/templates/admin_inicio.html
@@ -19,7 +19,8 @@
         </div>
         <nav class="menu">
             <ul class="main-menu">
-                <li><a href="gestion_usuarios.html" class="menu-item"><i class="fas fa-users-cog"></i> Gestión de usuarios</a></li>
+                <li><a href="{% url 'admin-gestion-empleados' %}" class="menu-item"><i class="fas fa-users"></i> Gestión de empleados</a></li>
+                {#<li><a href="{% url 'admin-gestion-usuarios' %}" class="menu-item"><i class="fas fa-users-cog"></i> Gestión de usuarios</a></li>#}
                 <li>
                     <a href="{% url 'logout' %}" class="menu-item" style="
                                                                 display: block;
@@ -122,6 +123,5 @@
     }
     </script>
     <script src="{% static 'js/menu.js' %}"></script>
-    <!-- <script src="{% static 'js/admin_inicio.js' %}"></script> -->
 </body>
 </html>
